--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "dependencies": {
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
+    "@ethersproject/providers": "^5.5.3",
     "@mui/icons-material": "^5.4.2",
     "@mui/material": "^5.4.2",
     "@reduxjs/toolkit": "^1.7.2",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "@walletconnect/web3-provider": "^1.7.1",
     "babel-plugin-relay": "^13.1.1",
     "bootstrap": "^5.1.3",
     "husky": "^7.0.4",
@@ -20,9 +22,10 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^4.0.3",
     "sass": "^1.49.8",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "web3modal": "^1.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
