--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@ethersproject/providers": "^5.5.3",
     "@mui/icons-material": "^5.4.2",
     "@mui/material": "^5.4.2",
-    "@reduxjs/toolkit": "^1.7.2",
+    "@reduxjs/toolkit": "^1.8.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
@@ -23,6 +23,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^4.0.3",
+    "redux": "^4.1.2",
     "sass": "^1.49.8",
     "web-vitals": "^2.1.4",
     "web3modal": "^1.9.5"
