--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "^4.0.3",
     "redux": "^4.1.2",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "sass": "^1.49.8",
     "web-vitals": "^2.1.4",
     "web3modal": "^1.9.5"
@@ -62,5 +64,8 @@
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
       "prettier --write"
     ]
+  },
+  "devDependencies": {
+    "@types/redux-logger": "^3.0.9"
   }
 }
