--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "@walletconnect/web3-provider": "^1.7.1",
+    "axios": "^0.26.1",
     "babel-plugin-relay": "^13.1.1",
     "bootstrap": "^5.1.3",
     "ethers": "^5.6.0",
