--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.8.1",
     "@ethersproject/providers": "^5.5.3",
     "@mui/icons-material": "^5.4.2",
+    "@mui/lab": "^5.0.0-alpha.73",
     "@mui/material": "^5.4.2",
     "@reduxjs/toolkit": "^1.8.0",
     "@testing-library/jest-dom": "^5.16.2",
@@ -15,11 +16,14 @@
     "@walletconnect/web3-provider": "^1.7.1",
     "babel-plugin-relay": "^13.1.1",
     "bootstrap": "^5.1.3",
+    "classnames": "^2.3.1",
     "ethers": "^5.6.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.4",
+    "notistack": "^1.0.10",
     "prettier": "^2.5.1",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
@@ -66,6 +70,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-copy-to-clipboard": "^5.0.2",
     "@types/redux-logger": "^3.0.9"
   }
 }
