--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@walletconnect/web3-provider": "^1.7.1",
     "babel-plugin-relay": "^13.1.1",
     "bootstrap": "^5.1.3",
+    "core-js": "^3.21.1",
     "ethers": "^5.6.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.4",
