--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "axios": "^0.26.1",
     "babel-plugin-relay": "^13.1.1",
     "bootstrap": "^5.1.3",
-    "core-js": "^3.21.1",
     "classnames": "^2.3.1",
+    "core-js": "^3.21.1",
     "ethers": "^5.4.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.4",
@@ -34,6 +34,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "sass": "^1.49.8",
+    "typescript": "^4.6.2",
     "web-vitals": "^2.1.4",
     "web3modal": "^1.9.4"
   },
