--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
     "@ethersproject/providers": "^5.0.12",
+    "@material-ui/core": "^5.0.0-beta.5",
     "@mui/icons-material": "^5.4.2",
     "@mui/lab": "^5.0.0-alpha.73",
     "@mui/material": "^5.4.2",
