--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
     "@ethersproject/providers": "^5.0.12",
-    "@material-ui/core": "^5.0.0-beta.5",
+    "@material-ui/core": "^4.11.4",
     "@mui/icons-material": "^5.4.2",
     "@mui/lab": "^5.0.0-alpha.73",
     "@mui/material": "^5.4.2",
@@ -35,7 +35,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "sass": "^1.49.8",
-    "typescript": "^4.6.2",
+    "typescript": "^4.3.2",
     "web-vitals": "^2.1.4",
     "web3modal": "^1.9.4"
   },
